--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,6 @@ resolver = "2"
 members = [
     "crypto",
     "crypto_core",
-    "crypto_full",
     "crypto_utils",
     "crypto_light",
     "crypto_light_full",
@@ -21,6 +20,7 @@ authors = ["Sentclose <contact@sentclose.com>", "Jörn Heinemann <j.heinemann@se
 homepage = "https://sentc.com/"
 documentation = "https://sentc.com/"
 repository = "https://github.com/sentclose/sentc"
+rust-version = "1.75.0"
 
 [workspace.dependencies]
 sentc-crypto-common = { version = "0.10.0", git = "https://github.com/sentclose/sentc-common.git", rev = "de513a82b0200b476d9592ba1de38c73c6a32354" }
@@ -29,7 +29,6 @@ sentc-crypto-common = { version = "0.10.0", git = "https://github.com/sentclose/
 sentc-crypto-core = { version = "0.12.0", path = "crypto_core" }
 sentc-crypto-utils = { version = "0.12.0", path = "crypto_utils" }
 sentc-crypto = { version = "0.12.0", path = "crypto", default-features = false }
-sentc-crypto-full = { version = "0.12.0", path = "crypto_full", default-features = false }
 sentc-crypto-light = { version = "0.12.0", path = "crypto_light", default-features = false }
 sentc-crypto-light-full = { version = "0.12.0", path = "crypto_light_full", default-features = false }
 
