--- a/crypto_core/Cargo.toml
+++ b/crypto_core/Cargo.toml
@@ -7,6 +7,7 @@ license-file.workspace = true
 authors.workspace = true
 documentation.workspace = true
 repository.workspace = true
+rust-version.workspace = true
 
 include = [
     "Cargo.toml",
