--- a/crypto_utils/Cargo.toml
+++ b/crypto_utils/Cargo.toml
@@ -7,6 +7,7 @@ homepage.workspace = true
 authors.workspace = true
 documentation.workspace = true
 repository.workspace = true
+rust-version.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
