--- a/crypto/Cargo.toml
+++ b/crypto/Cargo.toml
@@ -31,8 +31,7 @@ serde_json = { version = "1.0.81", default-features = false, features = ["alloc"
 serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
 
 [features]
-default = []
-rust = []
+export = []
 
 server = []
 server_test = []
