--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,14 @@ resolver = "2"
 members = [
     "crypto",
     "crypto_core",
+    "crypto_core_tests",
     "crypto_utils",
     "crypto_light",
     "implementation/js/sentc_wasm",
     "implementation/js/sentc_wasm_light",
     "implementation/dart/sentc_flutter_rust",
-    "implementation/dart/sentc_flutter_rust_light"
+    "implementation/dart/sentc_flutter_rust_light",
+    "crypto_keys/crypto_std_keys",
 ]
 
 [workspace.package]
@@ -29,6 +31,7 @@ sentc-crypto-core = { version = "0.12.0", path = "crypto_core" }
 sentc-crypto-utils = { version = "0.12.0", path = "crypto_utils" }
 sentc-crypto = { version = "0.12.0", path = "crypto", default-features = false }
 sentc-crypto-light = { version = "0.12.0", path = "crypto_light", default-features = false }
+sentc-crypto-std-keys = { version = "0.12.0", path = "crypto_keys/crypto_std_keys" }
 
 [profile.dev]
 # Must always use panic = "abort" to avoid needing to define the unstable eh_personality lang item.
