--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -26,7 +26,7 @@ jobs:
           key: ${{ runner.os }}-cargo-core-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Core tests
-        run: cargo test --package sentc-crypto-core --lib test
+        run: cargo test --package crypto_core_tests test
 
   crypto-default:
     runs-on: ubuntu-latest
@@ -44,7 +44,7 @@ jobs:
           key: ${{ runner.os }}-cargo-crypto_default-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Crypto default tests
-        run: cargo test --package sentc-crypto --lib test --features=server
+        run: cargo test --package sentc-crypto --lib test --features=server,export
 
   crypto-rust:
     runs-on: ubuntu-latest
@@ -62,7 +62,7 @@ jobs:
           key: ${{ runner.os }}-cargo-crypto_rust-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Crypto rust tests
-        run: cargo test --package sentc-crypto --lib test --features=rust,server
+        run: cargo test --package sentc-crypto --lib test --features=server
 
   crypto-light-default:
     runs-on: ubuntu-latest
@@ -80,7 +80,7 @@ jobs:
           key: ${{ runner.os }}-cargo-crypto_rust-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Crypto light default tests
-        run: cargo test --package sentc-crypto-light --lib test
+        run: cargo test --package sentc-crypto-light --lib test --features=export
 
   crypto-light-rust:
     runs-on: ubuntu-latest
@@ -98,4 +98,4 @@ jobs:
           key: ${{ runner.os }}-cargo-crypto_rust-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Crypto light rust tests
-        run: cargo test --package sentc-crypto-light --lib test --features=rust
+        run: cargo test --package sentc-crypto-light --lib test
