--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ members = [
 ]
 
 [workspace.package]
-version = "0.12.0"
+version = "0.13.0"
 edition = "2021"
 license-file = "LICENSE"
 authors = ["Sentclose <contact@sentclose.com>", "Jörn Heinemann <j.heinemann@sentclose.com>"]
@@ -26,11 +26,11 @@ rust-version = "1.75.0"
 sentc-crypto-common = { version = "0.10.0", git = "https://github.com/sentclose/sentc-common.git", rev = "de513a82b0200b476d9592ba1de38c73c6a32354" }
 #sentc-crypto-common = { path = "../backend/sentc-api/sdk-common" }    # for local dev
 
-sentc-crypto-core = { version = "0.12.0", path = "crypto_core" }
-sentc-crypto-utils = { version = "0.12.0", path = "crypto_utils" }
-sentc-crypto = { version = "0.12.0", path = "crypto", default-features = false }
-sentc-crypto-light = { version = "0.12.0", path = "crypto_light", default-features = false }
-sentc-crypto-std-keys = { version = "0.12.0", path = "crypto_keys/crypto_std_keys" }
+sentc-crypto-core = { version = "0.13.0", path = "crypto_core" }
+sentc-crypto-utils = { version = "0.13.0", path = "crypto_utils" }
+sentc-crypto = { version = "0.13.0", path = "crypto", default-features = false }
+sentc-crypto-light = { version = "0.13.0", path = "crypto_light", default-features = false }
+sentc-crypto-std-keys = { version = "0.13.0", path = "crypto_keys/crypto_std_keys" }
 
 [profile.dev]
 # Must always use panic = "abort" to avoid needing to define the unstable eh_personality lang item.
@@ -43,14 +43,14 @@ strip = true
 
 [profile.release.package.sentc_wasm]
 opt-level = "z"
-overflow-checks = true
+overflow-checks = false
 debug = 0
 debug-assertions = false
 codegen-units = 1
 
 [profile.release.package.sentc_wasm_light]
 opt-level = "z"
-overflow-checks = true
+overflow-checks = false
 debug = 0
 debug-assertions = false
 codegen-units = 1
