--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ members = [
     "implementation/js/sentc_wasm_light",
     "implementation/dart/sentc_flutter_rust",
     "implementation/dart/sentc_flutter_rust_light",
-    "crypto_keys/crypto_std_keys",
+    "crypto_keys/crypto_std_keys", "crypto_keys/crypto_fips_keys",
 ]
 
 [workspace.package]
