--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,8 @@ members = [
     "implementation/js/sentc_wasm_light",
     "implementation/dart/sentc_flutter_rust",
     "implementation/dart/sentc_flutter_rust_light",
-    "crypto_keys/crypto_std_keys", "crypto_keys/crypto_fips_keys",
+    "crypto_keys/crypto_std_keys",
+    "crypto_keys/crypto_fips_keys",
 ]
 
 [workspace.package]
@@ -31,6 +32,7 @@ sentc-crypto-utils = { version = "0.13.0", path = "crypto_utils" }
 sentc-crypto = { version = "0.13.0", path = "crypto", default-features = false }
 sentc-crypto-light = { version = "0.13.0", path = "crypto_light", default-features = false }
 sentc-crypto-std-keys = { version = "0.13.0", path = "crypto_keys/crypto_std_keys" }
+sentc-crypto-fips-keys = { version = "0.13.0", path = "crypto_keys/crypto_fips_keys" }
 
 [profile.dev]
 # Must always use panic = "abort" to avoid needing to define the unstable eh_personality lang item.
