--- a/crypto/Cargo.toml
+++ b/crypto/Cargo.toml
@@ -22,6 +22,7 @@ sentc-crypto-core = { workspace = true }
 sentc-crypto-utils = { workspace = true, features = ["encryption"] }
 sentc-crypto-common = { workspace = true }
 sentc-crypto-std-keys = { workspace = true, features = ["full"], optional = true }
+sentc-crypto-fips-keys = { workspace = true, features = ["full"], optional = true }
 
 # key and data export
 base64ct = { version = "1.0.1", default-features = false, features = ["alloc"] }  # must use this version because it is not comp. with password_hash from argon2
@@ -31,12 +32,11 @@ pem-rfc7468 = { version = "0.3.1", features = ["alloc"] }
 serde_json = { version = "1.0.81", default-features = false, features = ["alloc"] }
 serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
 
-[dev-dependencies]
-sentc-crypto-std-keys = { workspace = true, features = ["full"] }
-
 [features]
 export = ["std_keys"]
 std_keys = ["sentc-crypto-std-keys"]
+
+fips_keys = ["sentc-crypto-fips-keys"]
 
 server = []
 server_test = []
