--- a/crypto_utils/Cargo.toml
+++ b/crypto_utils/Cargo.toml
@@ -25,12 +25,12 @@ sentc-crypto-common = { workspace = true }
 sentc-crypto-core = { workspace = true }
 
 # json handling
-serde_json = { version = "1.0.81", default-features = false, features = ["alloc"] }
-serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
+serde_json.workspace = true
+serde.workspace = true
 
 # key and data export
-base64ct = { version = "1.0.1", default-features = false, features = ["alloc"] }  # must use this version because it is not comp. with password_hash from argon2
-pem-rfc7468 = { version = "0.3.1", features = ["alloc"] }
+base64ct.workspace = true
+pem-rfc7468.workspace = true
 
 #_______________________________________________________________________________________________________________________
 # req handling
