--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ members = [
     "implementation/dart/sentc_flutter_rust_light",
     "crypto_keys/crypto_std_keys",
     "crypto_keys/crypto_fips_keys",
+    "crypto_keys/crypto_rec_keys",
 ]
 
 [workspace.package]
@@ -38,7 +39,6 @@ sentc-crypto-rec-keys = { version = "0.13.0", path = "crypto_keys/crypto_rec_key
 #key export
 # must use this version because it is not comp. with password_hash from argon2
 base64ct = { version = "1.0.1", default-features = false, features = ["alloc"] }
-pem-rfc7468 = { version = "0.3.1", features = ["alloc"] }
 serde = { version = "1.0.137", features = ["derive"] }
 serde_json = { version = "1.0.81", default-features = false, features = ["alloc"] }
 
