--- a/crypto/Cargo.toml
+++ b/crypto/Cargo.toml
@@ -23,6 +23,7 @@ sentc-crypto-utils = { workspace = true, features = ["encryption"] }
 sentc-crypto-common = { workspace = true }
 sentc-crypto-std-keys = { workspace = true, features = ["full"], optional = true }
 sentc-crypto-fips-keys = { workspace = true, features = ["full"], optional = true }
+sentc-crypto-rec-keys = { workspace = true, features = ["full"], optional = true }
 
 # key and data export
 base64ct.workspace = true
@@ -36,6 +37,8 @@ export = ["std_keys"]
 std_keys = ["sentc-crypto-std-keys"]
 
 fips_keys = ["sentc-crypto-fips-keys"]
+
+rec_keys = ["sentc-crypto-rec-keys"]
 
 server = []
 server_test = []
