--- a/crypto_keys/crypto_rec_keys/Cargo.toml
+++ b/crypto_keys/crypto_rec_keys/Cargo.toml
@@ -25,24 +25,23 @@ digest = "0.10.7"
 argon2 = "0.3"
 ope = "0.1.1"
 openssl = { version = "0.10.64", default-features = false }
-pqcrypto-dilithium = "0.5.0"
-pqcrypto-kyber = "0.8.1"
-pqcrypto-traits = "0.3.5"
+
+safe-oqs = { version = "0.10.0", default-features = false, features = ["std", "ml_kem", "ml_dsa"] }
 
 # key and data export
 serde_json = { workspace = true, optional = true }
 serde = { workspace = true, optional = true }
 
 [features]
-default = ["ecies_kyber_hybrid", "ed25519_dilithium_hybrid"]
+default = ["ecies_ml_kem_hybrid", "ed25519_ml_dsa_hybrid"]
 
 # asymmetric encryption
 ecies = []
-ecies_kyber_hybrid = []
+ecies_ml_kem_hybrid = []
 
 # sign
 ed25519 = []
-ed25519_dilithium_hybrid = []
+ed25519_ml_dsa_hybrid = []
 
 wrapper = ["sentc-crypto-utils", "serde", "serde_json", "sentc-crypto-common", "sentc-crypto-fips-keys/wrapper"]
 full = ["wrapper", "sentc-crypto-utils/encryption", "sentc-crypto-fips-keys/full"]
