--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,24 +10,6 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  core-test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-
-      - uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-          key: ${{ runner.os }}-cargo-core-${{ hashFiles('**/Cargo.lock') }}
-
-      - name: Core tests
-        run: cargo test --package sentc-crypto-core test
-
   std-keys-test:
     runs-on: ubuntu-latest
     steps:
@@ -44,7 +26,7 @@ jobs:
           key: ${{ runner.os }}-cargo-core-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Std keys tests
-        run: cargo test --package sentc-crypto-std-keys --lib test --features=full
+        run: cargo test --package sentc-crypto-std-keys test --features=full
 
   crypto-default:
     runs-on: ubuntu-latest
