--- a/implementation/dart/sentc_flutter_rust/Cargo.toml
+++ b/implementation/dart/sentc_flutter_rust/Cargo.toml
@@ -1,12 +1,15 @@
 [package]
 name = "sentc_flutter"
-version.workspace = true
-edition.workspace = true
-license-file.workspace = true
-homepage.workspace = true
-authors.workspace = true
-documentation.workspace = true
-repository.workspace = true
+# version.workspace = true
+# edition.workspace = true
+# license-file.workspace = true
+# homepage.workspace = true
+# authors.workspace = true
+# documentation.workspace = true
+# repository.workspace = true
+
+version = "0.16.0"
+edition = "2021"
 
 description = "The flutter implementation for sentc."
 
@@ -16,15 +19,16 @@ description = "The flutter implementation for sentc."
 name = "sentc_flutter"
 crate-type = ["staticlib", "cdylib"]
 
+[lints.rust]
+unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
+
 [dependencies]
 # own crypto lib
 sentc-crypto = { workspace = true, features = ["export", "full_rustls"] }
 
 sentc-crypto-common = { workspace = true }
 
-tokio = { version = "1.20.4", features = ["rt-multi-thread"] }
-
-once_cell = "1.17.0"
-
 # flutter ffi
-flutter_rust_bridge = "^1.82.1"
+flutter_rust_bridge = "=2.9.0"
+
+serde_json.workspace = true
