--- a/implementation/dart/sentc_flutter_rust_light/Cargo.toml
+++ b/implementation/dart/sentc_flutter_rust_light/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "sentc_flutter_rust_light"
+name = "sentc_light_flutter"
 version.workspace = true
 edition.workspace = true
 license-file.workspace = true
@@ -10,20 +10,18 @@ repository.workspace = true
 
 description = "The flutter implementation for sentc light."
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [lib]
 name = "sentc_light_flutter"
 crate-type = ["staticlib", "cdylib"]
 
-[dependencies]
-sentc-crypto-common = { workspace = true }
+[lints.rust]
+unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
 
+[dependencies]
+# own crypto lib
 sentc-crypto-light = { workspace = true, features = ["export", "full_rustls"] }
 
-tokio = { version = "1.20.4", features = ["rt-multi-thread"] }
+sentc-crypto-common = { workspace = true }
 
-once_cell = "1.17.0"
-
-# flutter ffi
-flutter_rust_bridge = "^1.82.1"
+flutter_rust_bridge = "=2.9.0"
+serde_json.workspace = true
