--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ members = [
 	"crypto_keys/crypto_std_keys",
 	"crypto_keys/crypto_fips_keys",
 	"crypto_keys/crypto_rec_keys",
+	"implementation/uniffi/sentc_uniffi_rust",
+	"implementation/uniffi/sentc_uniffi_bindgen",
 ]
 
 [workspace.package]
