--- a/implementation/uniffi/sentc_uniffi_rust/Cargo.toml
+++ b/implementation/uniffi/sentc_uniffi_rust/Cargo.toml
@@ -23,3 +23,5 @@ uniffi = { version = "0.30.0", features = ["tokio"] }
 sentc-crypto = { workspace = true, features = ["export", "full_rustls"] }
 
 sentc-crypto-common = { workspace = true }
+
+serde_json.workspace = true
