--- a/crypto_core/Cargo.toml
+++ b/crypto_core/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "sentc-crypto-core"
-version.workspace = true
+#version.workspace = true
+version = "0.15.0"
 edition.workspace = true
 description = "The core of sentc encryption sdk with all alg."
 license-file.workspace = true
