--- a/crypto_utils/Cargo.toml
+++ b/crypto_utils/Cargo.toml
@@ -34,7 +34,7 @@ pem-rfc7468 = { version = "0.3.1", features = ["alloc"] }
 
 #_______________________________________________________________________________________________________________________
 # req handling
-reqwest = { version = "0.11.27", optional = true, default-features = false }
+reqwest = { version = "0.13", optional = true, default-features = false }
 
 wasm-bindgen = { version = "0.2.74", optional = true }
 
@@ -47,7 +47,7 @@ js-sys = { version = "0.3.58", optional = true }
 
 [features]
 # req handling
-rustls = ["reqwest/rustls-tls"]
+rustls = ["reqwest/rustls"]
 wasm = ["wasm-bindgen", "wasm-bindgen-futures", "web-sys", "js-sys"]
 
 crypto_full = []
