--- a/crypto_utils/Cargo.toml
+++ b/crypto_utils/Cargo.toml
@@ -35,6 +35,7 @@ pem-rfc7468 = { version = "0.3.1", features = ["alloc"] }
 #_______________________________________________________________________________________________________________________
 # req handling
 reqwest = { version = "0.13", optional = true, default-features = false }
+rustls = { version = "0.23", optional = true, default-features = false, features = ["ring"] }
 
 wasm-bindgen = { version = "0.2.74", optional = true }
 
@@ -47,7 +48,7 @@ js-sys = { version = "0.3.58", optional = true }
 
 [features]
 # req handling
-rustls = ["reqwest/rustls"]
+rustls = ["reqwest/rustls-no-provider", "dep:rustls"]
 wasm = ["wasm-bindgen", "wasm-bindgen-futures", "web-sys", "js-sys"]
 
 crypto_full = []
